--- a/Code/InfectStatisticWeb.html
+++ b/Code/InfectStatisticWeb.html
@@ -1,1 +1,108 @@
 <!DOCTYPE html>
+<html lang="zh-cn">
+<head>
+    <meta charset=UTF-8 />
+    <title>echart示例 中国地图</title>   
+    <script src="http://echarts.baidu.com/build/dist/echarts.js" type="text/javascript"></script>
+    <style type="text/css">
+     	div{
+	    background-color:gray
+	}
+    </style>
+</head>
+<body>
+    <div id="div1" style="width:900px;height:400px;border:1px solid #dddddd;margin:10px auto;"></div>
+    <script type="text/javascript">
+        require.config({
+            paths: {
+                echarts: 'http://echarts.baidu.com/build/dist' //引用资源文件夹路径，注意路径
+            }
+        });
+        require(
+            [
+                'echarts',
+                'echarts/chart/map'   // 按需加载所需图表，用到什么类型就加载什么类型，这里不需要考虑路径                    
+                //'echarts/chart/bar'     //柱形图
+                //'echarts/chart/line'    //折线图
+                //'echarts/chart/pie'     //饼图  （如需饼漏斗图动态类型切换，require时还需要echarts/chart/funnel）
+                //'echarts/chart/chord'   //和弦图
+                //'echarts/chart/map'     //地图
+                //'echarts/chart/radar'   //雷达  
+            ],
+            function (ec) {
+                var myChart = ec.init(document.getElementById('div1'));
+                var ecConfig = require('echarts/config');
+                var option = {
+                    title: {
+                        text: '全国地图数据',
+                        subtext: '',
+                        x: 'center'
+                    },
+                    tooltip: {
+                        trigger: 'item'
+                    },
+		    dataRange: {
+       			min: 0,
+        		max: 1000,
+        		color:['red','white'],
+        		text:['高','低'],           // 文本，默认为数值文本
+        		calculable : false
+    		    },
+                    series: [
+                    {
+                        name: '数据',
+                        type: 'map',
+                        mapType: 'china',
+                        roam: false,
+                        itemStyle: {
+                            normal: { label: { show: true} },
+                            emphasis: { label: { show: true} }
+                        },
+                        data: [
+                            { name: '北京', value: Math.round(Math.random() * 1000) },
+                            { name: '天津', value: Math.round(Math.random() * 1000) },
+                            { name: '上海', value: Math.round(Math.random() * 1000) },
+                            { name: '重庆', value: Math.round(Math.random() * 1000) },
+                            { name: '河北', value: Math.round(Math.random() * 1000) },
+                            { name: '河南', value: Math.round(Math.random() * 1000) },
+                            { name: '云南', value: Math.round(Math.random() * 1000) },
+                            { name: '辽宁', value: Math.round(Math.random() * 1000) },
+                            { name: '黑龙江', value: Math.round(Math.random() * 1000) },
+                            { name: '湖南', value: Math.round(Math.random() * 1000) },
+                            { name: '安徽', value: Math.round(Math.random() * 1000) },
+                            { name: '山东', value: Math.round(Math.random() * 1000) },
+                            { name: '新疆', value: Math.round(Math.random() * 1000) },
+                            { name: '江苏', value: Math.round(Math.random() * 1000) },
+                            { name: '浙江', value: Math.round(Math.random() * 1000) },
+                            { name: '江西', value: Math.round(Math.random() * 1000) },
+                            { name: '湖北', value: Math.round(Math.random() * 1000) },
+                            { name: '广西', value: Math.round(Math.random() * 1000) },
+                            { name: '甘肃', value: Math.round(Math.random() * 1000) },
+                            { name: '山西', value: Math.round(Math.random() * 1000) },
+                            { name: '内蒙古', value: Math.round(Math.random() * 1000) },
+                            { name: '陕西', value: Math.round(Math.random() * 1000) },
+                            { name: '吉林', value: Math.round(Math.random() * 1000) },
+                            { name: '福建', value: Math.round(Math.random() * 1000) },
+                            { name: '贵州', value: Math.round(Math.random() * 1000) },
+                            { name: '广东', value: Math.round(Math.random() * 1000) },
+                            { name: '青海', value: Math.round(Math.random() * 1000) },
+                            { name: '西藏', value: Math.round(Math.random() * 1000) },
+                            { name: '四川', value: Math.round(Math.random() * 1000) },
+                            { name: '宁夏', value: Math.round(Math.random() * 1000) },
+                            { name: '海南', value: Math.round(Math.random() * 1000) },
+                            { name: '台湾', value: Math.round(Math.random() * 1000) },
+                            { name: '香港', value: Math.round(Math.random() * 1000) },
+                            { name: '澳门', value: Math.round(Math.random() * 1000) }
+                        ]
+                    }]
+                };
+                myChart.setOption(option);
+            }
+        ); 
+
+    
+    </script>
+
+
+</body>
+</html>
